# arduino-client-starter

arduino/: Cargo.toml  arduino.ino  build.sh
arduino/src/: app.rs  arduino.rs  lib.rs
client/: Cargo.toml  README.md
client/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
