[package]
name = "arduino"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = { version = "2.0.0-alpha.1", features = ["alloc"], default-features = false }
static-alloc = "0.2.3"
shared = { path = "../shared" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
codegen-units = 1
lto = true
